--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,47 +1,49 @@
-@media(max-width: 768px){
-    bady {
+@media(max-width: 768px) {
+    body {
         background-position: center;
         padding: 0 15px;
+    }
+
+    .slider {
+        gap: 10px;
+    }
 }
 
-.slider{
-    gap: 10px;
-}
-
-}
-
-@media(max-width: 496px){
-    .lista-personagens{
+@media(max-width: 496px) {
+    .lista-personagens {
         width: 250px;
     }
-    .imagem-carta{
-     width: 100px;
- 
-    }
-    .slider{
-        position: relative; 
+
+    .imagem-carta {
+        width: 100%;
     }
 
-    .btn-seta{
+    .slider {
+        position: relative;
+    }
+
+    .btn-seta {
         position: absolute;
         bottom: -13%;
     }
-    #btn-avancar{
-        right: 20%;
 
+    #btn-avancar {
+        right: 20%;
     }
-    #btn-voltar{
+
+    #btn-voltar {
         left: 20%;
     }
 }
-@media(max-width: 375px){
-    body{
-    justify-content: start;
-    padding-top: 10px;
-    gap: 10px;
+
+@media(max-width: 375px) {
+    body {
+        justify-content: start;
+        padding-top: 10px;
+        gap: 10px;
     }
+
     .cabecalho {
         font-size: 12px;
-        
     }
 }
